--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port = 9000
+server.port=9000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_db
+spring.datasource.username=root
+spring.datasource.password=Lehas
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
